# termoneplus

./: build.gradle  buildTools.gradle  gradle.properties  sdkVersion.gradle  settings.gradle  version.gradle
.github/workflows/: build-debug-apk.yml
docs/: google-play-description
emulatorview/: build.gradle  libVersion.gradle
emulatorview/src/main/java/com/termoneplus/utils/: SimpleClipboardManager.java
emulatorview/src/main/java/jackpal/androidterm/emulatorview/: ByteQueue.java  EmulatorView.java  TermKeyListener.java  TermSession.java  UnicodeTranscript.java
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
libtermexec/: build.gradle
libtermexec/src/main/cpp/: CMakeLists.txt
samples/addon/: build.gradle
samples/addon/src/main/cpp/: CMakeLists.txt
samples/intents/: build.gradle
samples/pathbroadcasts/: README.adoc  build.gradle
samples/telnet/: build.gradle
term/: build.gradle
term/src/main/: AndroidManifest.xml
term/src/main/aidl/com/termoneplus/v1/: ICommand.aidl
term/src/main/java/com/termoneplus/: Application.java  Installer.java  Permissions.java  RemoteActionActivity.java  Settings.java  TermActionBar.java  TermActivity.java
term/src/main/java/com/termoneplus/compat/: PackageManagerCompat.java  SoftInputCompat.java
term/src/main/java/com/termoneplus/remote/: CommandCollector.java
term/src/main/java/com/termoneplus/services/: CommandService.java
term/src/main/java/com/termoneplus/utils/: ScriptImporter.java
term/src/main/java/jackpal/androidterm/: Term.java  TermService.java  TermView.java
term/src/main/java/jackpal/androidterm/compat/: PRNGFixes.java
term/src/main/java/jackpal/androidterm/util/: TermSettings.java
term/src/main/jni/: CMakeLists.txt
term/src/main/res/layout/: activity_file_selection.xml  activity_term.xml  activity_term_floatbar.xml  activity_windowlist.xml  drawer_term.xml  extra_keys.xml  header_term.xml
term/src/main/res/values/: arrays.xml  arraysNoLocalize.xml  defaults.xml  resources.xml  strings.xml  styles.xml
term/src/main/res/values-bg/: arrays.xml  strings.xml
term/src/main/res/values-de/: arrays.xml  strings.xml
term/src/main/res/values-en-rGB/: arrays.xml  strings.xml
term/src/main/res/values-es/: arrays.xml  strings.xml
term/src/main/res/values-fr/: arrays.xml  strings.xml
term/src/main/res/values-hu/: arrays.xml  strings.xml
term/src/main/res/values-it/: arrays.xml  strings.xml
term/src/main/res/values-iw/: arrays.xml  strings.xml
term/src/main/res/values-ja/: strings.xml
term/src/main/res/values-ka/: strings.xml
term/src/main/res/values-ko/: arrays.xml  strings.xml
term/src/main/res/values-nb/: arrays.xml  strings.xml
term/src/main/res/values-nl/: arrays.xml  strings.xml
term/src/main/res/values-pl/: arrays.xml  strings.xml
term/src/main/res/values-pt/: strings.xml
term/src/main/res/values-ro/: strings.xml
term/src/main/res/values-ru/: arrays.xml  strings.xml
term/src/main/res/values-sk/: arrays.xml  strings.xml
term/src/main/res/values-sr/: arrays.xml  strings.xml
term/src/main/res/values-uk/: strings.xml
term/src/main/res/values-v35/: resources.xml
term/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
term/src/main/res/xml/: preferences.xml
